--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <base href="/">
-    <title>Angular 2 QuickStart</title>
+    <title>Angular 2 QuickStart (Plate)</title>
 
     <!-- 1. Load libraries -->
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
